resources/assets/styles/components/_hours.scss
section.utk-hours-section {
  background-color: $smokeyx;

  @include filter-gradient-horizontal($smokeyx, 49.999999%, $smokeyx, 50%);

  @include respond(xs) {
    background-color: $smokeyx !important;
    position: fixed;
    width: 100%;
    height: 47px;
    bottom: 0;
    z-index: 999;
  }
}

.utk-hours--wrap {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  @include respond(xs) {
    flex-direction: row;
    background-color: transparent;
  }

  .utk-hours--today {
    display: flex;
    align-content: flex-end;
    flex-direction: column;
    flex-shrink: 1;
    flex-grow: 0;
    flex-wrap: wrap;
    padding: $golden-ratio-1 $golden-ratio-3 $golden-ratio-1 0;

    @include respond(xs) {
      flex-direction: row;
      padding: $golden-ratio-1 $golden-ratio-3 $golden-ratio-1 0;
      background-color: $smokeyx;
      clip-path: polygon(0 0, calc(100% - 15px) 0, 100% 100%, 0 100%);
      position: relative;
      z-index: 1;
    }

    &--label {
      display: block;
      font-size: $type-0;
      font-weight: 700;
      text-transform: uppercase;
      color: $rock;

      @include respond(xs) {
        margin-right: $golden-ratio-2;
        font-size: $type-1;
        text-transform: none;
      }
    }

    &--range {
      color: $white !important;
      display: block;
      font-size: $type-3;
      font-weight: 700;
      text-transform: uppercase;
      position: relative;

      @include respond(xs) {
        font-size: $type-2;
      }

      &::before {
        display: inline-block;
        width: 13px;
        height: 13px;
        margin-top: 7px;
        content: ' ';
        border-radius: 100%;
        background-color: $smokey;

        @include respond(xs) {
          width: 9px;
          height: 9px;
          margin-top: 1px;
          margin-right: 6px;
        }
      }

      &.utk-hours--open::before {
        background-color: $switchgrass;
      }

      &.utk-hours--closed::before {
        background-color: $smokey;
      }
    }
  }

  .utk-hours--more {
    position: relative;
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
    flex-shrink: 0;
    flex-grow: 1;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 15px 100%);
    overflow: hidden;
    background-color: $smokeyx;

    @include respond(xs) {
      z-index: 0;
      margin-left: -15px;
      background-color: transparent;
    }

    &--image {
      width: calc(100% + 30px);
      height: calc(100% + 30px);
      z-index: 0;
      position: absolute;
      background-size: cover;
      background-position: 50% 50%;
      background-repeat: no-repeat;
      opacity: 1;
      filter: blur($golden-ratio-1);
      margin: 15px 0 0 15px;
      left: -$golden-ratio-3;
      top: -$golden-ratio-3;
    }

    &--overlay {
      position: absolute;
      //display: flex;
      align-items: flex-end;
      justify-content: flex-end;
      height: 100%;
      width: 61.8%;
      z-index: 1;
      background-color: transparent;
      padding: $golden-ratio-2 0;
      top: 0;
      right: 0;

      @include respond(xs) {
        width: 100%;
        background-color: transparent !important;
      }
    }
  }
}

